--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -188,6 +188,12 @@ releases:
           auth_enabled: false
           commonConfig:
             replication_factor: 1
+          storage:
+            type: filesystem
+            bucketNames:
+              chunks: chunks
+              ruler: ruler
+              admin: admin
           schemaConfig:
             configs:
               - from: "2024-04-01"
