--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -501,7 +501,7 @@ releases:
             name: nginx
             default: true
           admissionWebhooks:
-            enabled: true
+            enabled: false
           service:
             enabled: true
             type: LoadBalancer
