Add priority classes to essential containers

--- a/charts/database/templates/unbind_db.yaml
+++ b/charts/database/templates/unbind_db.yaml
@@ -30,6 +30,8 @@ spec:
   allowedSourceRanges:
     - 0.0.0.0/0
 
+  podPriorityClassName: system-cluster-critical
+
   databases:
     dex: dex
     unbind: unbind
