--- a/charts/unbind-operator/templates/manager/manager.yaml
+++ b/charts/unbind-operator/templates/manager/manager.yaml
@@ -25,6 +25,7 @@ spec:
         {{- end }}
         {{- end }}
     spec:
+      priorityClassName: system-cluster-critical
       containers:
         - name: manager
           args:
