--- a/charts/database/templates/unbind_db.yaml
+++ b/charts/database/templates/unbind_db.yaml
@@ -30,7 +30,7 @@ spec:
   allowedSourceRanges:
     - 0.0.0.0/0
 
-  podPriorityClassName: system-cluster-critical
+  podPriorityClassName: unbind-high-priority
 
   databases:
     dex: dex
