--- a/charts/kube-oidc-proxy/templates/deployment.yaml
+++ b/charts/kube-oidc-proxy/templates/deployment.yaml
@@ -14,7 +14,7 @@ spec:
       labels:
         {{- include "kube-oidc-proxy.selectorLabels" . | nindent 8 }}
     spec:
-      priorityClassName: system-cluster-critical
+      priorityClassName: unbind-high-priority
       serviceAccountName: {{ include "kube-oidc-proxy.serviceAccountName" . }}
       containers:
       - name: kube-oidc-proxy
