--- a/charts/unbind/templates/deployment-auth.yaml
+++ b/charts/unbind/templates/deployment-auth.yaml
@@ -23,7 +23,7 @@ spec:
         app: {{ .Values.auth.name }}
         {{- include "unbind.auth.selectorLabels" . | nindent 8 }}
     spec:
-      priorityClassName: system-cluster-critical
+      priorityClassName: unbind-high-priority
       initContainers:
         - name: wait-for-db
           image: busybox:1.36
