--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -388,18 +388,19 @@ releases:
         commonConfiguration: |-
           appendonly yes
           protected-mode no
-        primary:
+        master:
           replicaCount: 1
           persistence:
             enabled: true
             size: 512Mi
+          resourcesPreset: "none"
           resources:
             requests:
-              memory: "10Mi"
-              cpu: "10m"
+              memory: 10Mi
+              cpu: 10m
             limits:
               memory: 192Mi
-              cpu: 200m
+              cpu: 150m
         replica:
           replicaCount: 0
     labels:
@@ -1023,7 +1024,7 @@ releases:
           resources:
             requests:
               memory: "128Mi"
-              cpu: "100m"
+              cpu: "20m"
             limits:
               cpu: {{ .Values | get "overrides.unbind.ui.resources.limits.cpu" "500m" }}
               memory: {{ .Values | get "overrides.unbind.ui.resources.limits.memory" "1Gi" }}
@@ -1068,7 +1069,7 @@ releases:
           resources:
             requests:
               memory: "10Mi"
-              cpu: "100m"
+              cpu: "20m"
             limits:
               cpu: {{ .Values | get "overrides.unbind.api.resources.limits.cpu" "500m" }}
               memory: {{ .Values | get "overrides.unbind.api.resources.limits.memory" "2Gi" }}
@@ -1160,7 +1161,7 @@ releases:
           resources:
             requests:
               memory: "10Mi"
-              cpu: "100m"
+              cpu: "20m"
             limits:
               cpu: {{ .Values | get "overrides.unbind.auth.resources.limits.cpu" "500m" }}
               memory: {{ .Values | get "overrides.unbind.auth.resources.limits.memory" "2Gi" }}
