--- a/charts/unbind-operator/templates/crd/unbind.unbind.app_services.yaml
+++ b/charts/unbind-operator/templates/crd/unbind.unbind.app_services.yaml
@@ -129,37 +129,42 @@ spec:
                         description: Command for exec health checks (will be parsed
                           similar to RunCommand)
                         type: string
-                      livenessFailureThreshold:
-                        description: 'LivenessFailureThreshold is the failure threshold
-                          for liveness probes (default: 5)'
+                      healthFailureThreshold:
+                        description: 'HealthFailureThreshold is the failure threshold
+                          for health probes (default: 3)'
+                        format: int32
+                        type: integer
+                      healthPeriodSeconds:
+                        description: 'HealthPeriodSeconds is how often to perform
+                          the probe (default: 10)'
+                        format: int32
+                        type: integer
+                      healthTimeoutSeconds:
+                        description: 'HealthTimeoutSeconds is how long to wait before
+                          marking probe as failed (default: 5)'
                         format: int32
                         type: integer
                       path:
                         description: Path for HTTP health checks (e.g., "/api/health")
                         type: string
-                      periodSeconds:
-                        description: 'PeriodSeconds is how often to perform the probe
-                          (default: 10)'
-                        format: int32
-                        type: integer
                       port:
                         description: Port for HTTP health checks (defaults to first
                           container port if not specified)
                         format: int32
                         type: integer
-                      readinessFailureThreshold:
-                        description: 'ReadinessFailureThreshold is the failure threshold
-                          for readiness probes (default: 3)'
-                        format: int32
-                        type: integer
                       startupFailureThreshold:
                         description: 'StartupFailureThreshold is the failure threshold
-                          for startup probes (default: 5)'
+                          for startup probes (default: 30)'
                         format: int32
                         type: integer
-                      timeoutSeconds:
-                        description: 'TimeoutSeconds is how long to wait before marking
-                          probe as failed (default: 5)'
+                      startupPeriodSeconds:
+                        description: 'StartupPeriodSeconds is how often to perform
+                          the probe (default: 3)'
+                        format: int32
+                        type: integer
+                      startupTimeoutSeconds:
+                        description: 'StartupTimeoutSeconds is how long to wait before
+                          marking probe as failed (default: 5)'
                         format: int32
                         type: integer
                       type:
