--- a/charts/unbind/templates/deployment-ui.yaml
+++ b/charts/unbind/templates/deployment-ui.yaml
@@ -40,7 +40,7 @@ spec:
           {{- if .Values.ui.startupProbe.enabled }}
           startupProbe:
             httpGet:
-              path: {{ .Values.ui.startupProbe.path }}
+              path: /health
               port: {{ .Values.ui.containerPort }}
             failureThreshold: {{ .Values.ui.startupProbe.failureThreshold }}
             periodSeconds: {{ .Values.ui.startupProbe.periodSeconds }}
@@ -48,7 +48,7 @@ spec:
           {{- if .Values.ui.livenessProbe.enabled }}
           livenessProbe:
             httpGet:
-              path: /
+              path: /health
               port: {{ .Values.ui.containerPort }}
             initialDelaySeconds: {{ .Values.ui.livenessProbe.initialDelaySeconds }}
             periodSeconds: {{ .Values.ui.livenessProbe.periodSeconds }}
@@ -56,7 +56,7 @@ spec:
           {{- if .Values.ui.readinessProbe.enabled }}
           readinessProbe:
             httpGet:
-              path: /
+              path: /health
               port: {{ .Values.ui.containerPort }}
             initialDelaySeconds: {{ .Values.ui.readinessProbe.initialDelaySeconds }}
             periodSeconds: {{ .Values.ui.readinessProbe.periodSeconds }}
